Fixed layout on list viewer and editor pages. overflow-x of elements is now hidden to prevent overflow of item quantity inputs. Item quantity inputs are also resized to 3rem.

--- a/a2note/static/a2note/main.css
+++ b/a2note/static/a2note/main.css
@@ -433,6 +433,7 @@ option {
   box-shadow:         4px 3px 3px var(--shadow-color);
   transition: transform .2s;
   transition: box-shadow .2s;
+  overflow-x: hidden;
 }
 
 .element div {
@@ -547,6 +548,10 @@ option {
 
 .singleItem {
   min-height: 4rem;
+}
+
+.itemQuantity {
+  width: 3.5rem;
 }
 
 .section {
